--- a/GoogleBooks/GoogleBooks/App.xaml
+++ b/GoogleBooks/GoogleBooks/App.xaml
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<Application xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GoogleBooks.App">
+<Application
+    x:Class="GoogleBooks.App"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <Application.Resources>
+        <Color x:Key="GrayColor">#f5f5f5</Color>
+        <Color x:Key="WhiteColor">#ffffff</Color>
 
     </Application.Resources>
 </Application>
