--- a/GoogleBooks/GoogleBooks/View/BooksView.xaml
+++ b/GoogleBooks/GoogleBooks/View/BooksView.xaml
@@ -35,7 +35,7 @@
                 HeightRequest="50"
                 Placeholder="Pesquisar"
                 SearchCommand="{Binding SearchCommand}"
-                Text="{Binding SearchText, Mode=TwoWay}" />
+                Text="{Binding Search, Mode=TwoWay}" />
 
             <CollectionView
                 Grid.Row="1"
