--- a/GoogleBooks/GoogleBooks/View/BookDetailView.xaml
+++ b/GoogleBooks/GoogleBooks/View/BookDetailView.xaml
@@ -6,6 +6,7 @@
     xmlns:base="clr-namespace:GoogleBooks.View.Base"
     xmlns:converters="clr-namespace:GoogleBooks.Converter"
     xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+    xmlns:helpers="clr-namespace:GoogleBooks.Helpers"
     BackgroundColor="{StaticResource WhiteColor}">
     <base:BasePage.Resources>
         <ResourceDictionary>
@@ -17,7 +18,7 @@
             <Grid
                 ColumnDefinitions="*,*"
                 HorizontalOptions="FillAndExpand"
-                RowDefinitions="100,auto,*,80"
+                RowDefinitions="100,auto,50,*,80"
                 VerticalOptions="FillAndExpand">
 
                 <Label
@@ -57,9 +58,40 @@
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
+                <StackLayout
+                    Grid.Row="2"
+                    Grid.ColumnSpan="2"
+                    Margin="0,10"
+                    HorizontalOptions="Center"
+                    Orientation="Horizontal"
+                    VerticalOptions="FillAndExpand">
+                    <Label
+                        HorizontalOptions="Center"
+                        Style="{StaticResource BaseLabelStyle}"
+                        Text="Save as favorite" />
+                    <Label
+                        Margin="5,0"
+                        BackgroundColor="Transparent"
+                        FontSize="16"
+                        HorizontalOptions="Center"
+                        Style="{StaticResource FontAwesomeRegular}"
+                        Text="{x:Static helpers:Icon.Star}">
+                        <Label.Triggers>
+                            <DataTrigger
+                                Binding="{Binding BaseBooks.IsFavorite}"
+                                TargetType="Label"
+                                Value="true">
+                                <Setter Property="FontFamily" Value="FontAwesomeBold" />
+                            </DataTrigger>
+                        </Label.Triggers>
+                    </Label>
+                    <StackLayout.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding FavoriteCommand}" />
+                    </StackLayout.GestureRecognizers>
+                </StackLayout>
 
                 <Label
-                    Grid.Row="2"
+                    Grid.Row="3"
                     Grid.ColumnSpan="2"
                     Padding="10"
                     HorizontalOptions="FillAndExpand"
@@ -67,7 +99,7 @@
                     VerticalOptions="FillAndExpand" />
 
                 <Frame
-                    Grid.Row="3"
+                    Grid.Row="4"
                     Grid.ColumnSpan="2"
                     Padding="0"
                     BackgroundColor="{StaticResource WhiteColor}"
