--- a/GoogleBooks/GoogleBooks/View/BooksView.xaml
+++ b/GoogleBooks/GoogleBooks/View/BooksView.xaml
@@ -6,6 +6,7 @@
     xmlns:base="clr-namespace:GoogleBooks.View.Base"
     xmlns:converters="clr-namespace:GoogleBooks.Converter"
     xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+    xmlns:helpers="clr-namespace:GoogleBooks.Helpers"
     xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
     xmlns:sk="clr-namespace:Xamarin.Forms.Skeleton;assembly=Xamarin.Forms.Skeleton"
     ios:Page.UseSafeArea="False">
@@ -29,7 +30,7 @@
         </Style>
     </base:BasePage.Resources>
     <base:BasePage.Content>
-        <Grid x:Name="MainGrid" RowDefinitions="auto,*">
+        <Grid x:Name="MainGrid" RowDefinitions="auto,50,*">
             <SearchBar
                 Grid.Row="0"
                 HeightRequest="50"
@@ -37,9 +38,34 @@
                 SearchCommand="{Binding SearchCommand}"
                 Text="{Binding Search, Mode=TwoWay}" />
 
-            <CollectionView
+            <CheckBox
                 Grid.Row="1"
-                Margin="10,19,10,0"
+                Margin="20,0"
+                IsChecked="{Binding IsFavorites}"
+                Color="#33919c" />
+
+            <StackLayout
+                Grid.Row="1"
+                Margin="20,0"
+                HeightRequest="50"
+                HorizontalOptions="FillAndExpand"
+                Orientation="Horizontal"
+                TranslationY="10"
+                VerticalOptions="Center">
+                <Label
+                    FontSize="18"
+                    Text="View only bookmarks"
+                    TextColor="#33919c"
+                    TranslationX="40" />
+                <StackLayout.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding FilterFavoritesCommand}" />
+                </StackLayout.GestureRecognizers>
+            </StackLayout>
+
+
+            <CollectionView
+                Grid.Row="2"
+                Margin="10,10,10,0"
                 sk:Skeleton.Animation="{sk:DefaultAnimation Source=Beat,
                                                             Interval='600',
                                                             Parameter='1.03'}"
@@ -50,8 +76,6 @@
                 HorizontalScrollBarVisibility="Never"
                 ItemsSource="{Binding BaseBooks}"
                 ItemsUpdatingScrollMode="KeepItemsInView"
-                RemainingItemsThreshold="{Binding RemainingItems}"
-                RemainingItemsThresholdReachedCommand="{Binding ThresholdReachedCommand}"
                 SelectedItem="{Binding ItemSelected}"
                 SelectionChangedCommand="{Binding SelectedCommand, Mode=TwoWay}"
                 SelectionChangedCommandParameter="{Binding ItemSelected}"
@@ -108,13 +132,32 @@
                                 HasShadow="False"
                                 HorizontalOptions="FillAndExpand"
                                 IsClippedToBounds="True">
-                                <Label
-                                    FontAttributes="Bold"
-                                    FontSize="20"
-                                    HorizontalOptions="StartAndExpand"
-                                    HorizontalTextAlignment="Start"
-                                    Text="{Binding Title}"
-                                    VerticalTextAlignment="Start" />
+                                <Grid ColumnDefinitions="*, auto">
+                                    <Label
+                                        Grid.Column="0"
+                                        FontAttributes="Bold"
+                                        FontSize="12"
+                                        Style="{StaticResource BaseLabelStyle}"
+                                        Text="{Binding Title}" />
+
+                                    <Label
+                                        Grid.Column="1"
+                                        Margin="5,0"
+                                        BackgroundColor="Transparent"
+                                        FontSize="16"
+                                        HorizontalOptions="End"
+                                        Style="{StaticResource FontAwesomeRegular}"
+                                        Text="{x:Static helpers:Icon.Star}">
+                                        <Label.Triggers>
+                                            <DataTrigger
+                                                Binding="{Binding IsFavorite}"
+                                                TargetType="Label"
+                                                Value="true">
+                                                <Setter Property="FontFamily" Value="FontAwesomeBold" />
+                                            </DataTrigger>
+                                        </Label.Triggers>
+                                    </Label>
+                                </Grid>
                             </Frame>
                         </Grid>
                     </DataTemplate>
